--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     <div class="stack-card" user-id="8461233"></div>
                   </div>
                   <div class="col">
-                    <div class="github-card" username="vinaysomawat"></div>
+                    <div class="github-card" username="sid-senthilkumar"></div>
                   </div>
                 </div>
               </div>
@@ -129,7 +129,7 @@
               >
                 <div class="about-desc">
                   <a
-                    href="https://github.com/vinaysomawat"
+                    href="https://github.com/sid-senthilkumar"
                     target="_blank"
                     style="color: inherit"
                   >
