--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Portfolio webpage of Vinay Somawat" />
+    <meta name="description" content="Portfolio webpage of Sid Senthilkumar" />
     <meta
       name="keywords"
-      content="portfolio,website,personal website,github,projects,computer science and engineering"
+      content="portfolio,website,personal website,github,projects,computer science and engineering, bioinformatics, biotechnology, RNAseq, computational biology"
     />
     <meta name="author" content="Sid Senthilkumar" />
     <link
@@ -254,7 +254,7 @@
                   <h1>Contact</h1>
                 </div>
                 <p>
-                  Feel free to email me at <strong>vinaysomawat40@gmail.com</strong> for tech
+                  Feel free to email me at <strong>siddharthkrishna.ssk@gmail.com</strong> for tech
                   discussions, business opportunities, or just to say hello—I’d
                   love to hear from you!
                 </p>
