--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title></title>
+    <title>Sid Senthilkumar - Bioinformatician & AI/ML Specialist</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Portfolio webpage of Sid Senthilkumar" />
+    <meta name="description" content="Portfolio webpage of Sid Senthilkumar - Bioinformatician specializing in AI/ML applications in computational biology" />
     <meta
       name="keywords"
-      content="portfolio,website,personal website,github,projects,computer science and engineering, bioinformatics, biotechnology, RNAseq, computational biology"
+      content="portfolio,website,personal website,github,projects,bioinformatics, computational biology, AI/ML, geometric deep learning, multi-omics, gene regulation"
     />
     <meta name="author" content="Sid Senthilkumar" />
     <link
@@ -28,8 +28,6 @@
     />
 
     <script src="js/modernizr-2.6.2.min.js"></script>
-    <script type="module" src="index.js"></script>
-    <script src="js/profile-card.js"></script>
   </head>
   <body>
     <div id="colorlib-page">
@@ -53,6 +51,7 @@
               <img alt="profile-img" src="./logo.png" />
             </div>
             <h1 id="colorlib-logo"><a href="./index.html">Sid Senthilkumar</a></h1>
+            <a href="Sid-Senthilkumar-may23.pdf" download class="resume-download-btn">Download Resume</a>
           </div>
           <nav
             id="colorlib-main-menu"
@@ -64,17 +63,9 @@
               <ul>
                 <li><a href="#" data-nav-section="about">About</a></li>
                 <li><a href="#" data-nav-section="skills">Skills</a></li>
-                <li>
-                  <a href="#" data-nav-section="repos">Top Repositories</a>
-                </li>
-                <li><a href="#" data-nav-section="blogs">Blogs</a></li>
-                <li>
-                  <a href="#" data-nav-section="experience">Work Experience</a>
-                </li>
-                <li>
-                  <a href="#" data-nav-section="trekking">Trekking</a>
-                </li>
+                <li><a href="#" data-nav-section="experience">Work Experience</a></li>
                 <li><a href="#" data-nav-section="education">Education</a></li>
+                <li><a href="#" data-nav-section="repos">Projects</a></li>
                 <li><a href="#" data-nav-section="contact">Contact</a></li>
               </ul>
             </div>
@@ -91,7 +82,58 @@
               </div>
             </div>
           </section>
-          <section class="colorlib-skills" data-section="skills">
+          <!-- Social Cards Section (top, after About) -->
+          <section class="social-cards-section">
+            <!-- GitHub Card -->
+            <div class="social-card stat-card">
+              <a href="https://github.com/sid-senthilkumar" target="_blank" rel="noopener" style="text-decoration:none;color:inherit;">
+                <div style="display:flex;align-items:center;gap:0.7em;">
+                  <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub" style="width:44px;height:44px;border-radius:50%;background:#eee;">
+                  <div>
+                    <div style="font-weight:700;font-size:1.1em;">Sid Senthilkumar</div>
+                    <div style="font-size:0.95em;color:#555;">@sid-senthilkumar</div>
+                  </div>
+                </div>
+                <div class="stat-row">
+                  <span><strong>Repositories</strong> 19</span>
+                  <span><strong>Followers</strong> 0</span>
+                </div>
+              </a>
+            </div>
+            <!-- Twitter/X Card -->
+            <div class="social-card stat-card">
+              <a href="https://twitter.com/hopelesslystoic" target="_blank" rel="noopener" style="text-decoration:none;color:inherit;">
+                <div style="display:flex;align-items:center;gap:0.7em;">
+                  <img src="https://abs.twimg.com/icons/apple-touch-icon-192x192.png" alt="Twitter/X" style="width:44px;height:44px;border-radius:50%;background:#eee;">
+                  <div>
+                    <div style="font-weight:700;font-size:1.1em;">Twitter/X</div>
+                    <div style="font-size:0.95em;color:#555;">@hopelesslystoic</div>
+                  </div>
+                </div>
+                <div class="stat-row">
+                  <span><strong>Posts</strong> 13.9K</span>
+                  <span><strong>Followers</strong> 1,261</span>
+                </div>
+              </a>
+            </div>
+            <!-- LinkedIn Card -->
+            <div class="social-card stat-card">
+              <a href="https://www.linkedin.com/in/sidkrishnasenthilkumar/" target="_blank" rel="noopener" style="text-decoration:none;color:inherit;">
+                <div style="display:flex;align-items:center;gap:0.7em;">
+                  <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn" style="width:44px;height:44px;border-radius:50%;background:#eee;">
+                  <div>
+                    <div style="font-weight:700;font-size:1.1em;">LinkedIn</div>
+                    <div style="font-size:0.95em;color:#555;">sidkrishnasenthilkumar</div>
+                  </div>
+                </div>
+                <div class="stat-row">
+                  <span><strong>Connections</strong> 500+</span>
+                  <span><strong>Followers</strong> 1,000+</span>
+                </div>
+              </a>
+            </div>
+          </section>
+          <section class="colorlib-skills skills-section" data-section="skills">
             <div class="colorlib-narrow-content">
               <div
                 class="row row-bottom-padded-sm animate-box"
@@ -111,17 +153,12 @@
                 data-animate-effect="fadeInLeft"
               >
                 <div class="profile-cards">
-                  <div class="col">
-                    <div class="stack-card" user-id="8461233"></div>
-                  </div>
-                  <div class="col">
-                    <div class="github-card" username="sid-senthilkumar"></div>
-                  </div>
+                  <!-- Removed old GitHub card widget from profile-card section -->
                 </div>
               </div>
             </div>
           </section>
-          <section class="colorlib-experience no-print" data-section="repos">
+          <section class="colorlib-experience repo-section" data-section="repos">
             <div class="colorlib-narrow-content">
               <div
                 class="row row-bottom-padded-sm animate-box"
@@ -131,6 +168,7 @@
                   <a
                     href="https://github.com/sid-senthilkumar"
                     target="_blank"
+                    rel="noopener"
                     style="color: inherit"
                   >
                     <h1>
@@ -159,50 +197,7 @@
               </ul>
             </div>
           </section>
-          <section class="colorlib-blogs no-print" data-section="blogs">
-            <div class="colorlib-narrow-content">
-              <div
-                class="row row-bottom-padded-sm animate-box"
-                data-animate-effect="fadeInLeft"
-              >
-                <div class="about-desc">
-                  <a
-                    href="https://vinaysomawat.medium.com/"
-                    target="_blank"
-                    style="color: inherit"
-                  >
-                    <h1>
-                      Latest <span style="color: #f9bf3f">Blogs</span>
-                      <i
-                        class="fa fa-external-link"
-                        aria-hidden="true"
-                        style="font-size: 30px"
-                      ></i>
-                    </h1>
-                  </a>
-                </div>
-              </div>
-              <ul
-                id="accordion"
-                class="accordion animate-box"
-                data-animate-effect="fadeInLeft"
-              >
-                <li class="open">
-                  <ul
-                    id="blogs"
-                    class="submenu"
-                    style="
-                      display: flex;
-                      padding: 10px;
-                      flex-direction: column;
-                      gap: 10px;
-                    "
-                  ></ul>
-                </li>
-              </ul>
-            </div>
-          </section>
-          <section class="colorlib-experience" data-section="experience">
+          <section class="colorlib-experience timeline-section" data-section="experience">
             <div class="colorlib-narrow-content">
               <div
                 class="row row-bottom-padded-sm animate-box fadeInLeft animated"
@@ -215,23 +210,7 @@
               <div class="timeline-centered" id="experience"></div>
             </div>
           </section>
-          <section class="colorlib-skills" data-section="trekking">
-            <div class="colorlib-narrow-content">
-              <div
-                class="row row-bottom-padded-sm animate-box"
-                data-animate-effect="fadeInLeft"
-              >
-                <div class="about-desc">
-                  <h1>
-                    Trekking <span style="color: #f9bf3f">Adventures</span>
-                  </h1>
-                  <p>Here are the treks I’ve explored so far:</p>
-                  <div id="trekking" class="row"></div>
-                </div>
-              </div>
-            </div>
-          </section>
-          <section class="colorlib-education" data-section="education">
+          <section class="colorlib-education timeline-section" data-section="education">
             <div class="colorlib-narrow-content">
               <div
                 class="row row-bottom-padded-sm animate-box fadeInLeft animated"
@@ -255,7 +234,7 @@
                 </div>
                 <p>
                   Feel free to email me at <strong>siddharthkrishna.ssk@gmail.com</strong> for tech
-                  discussions, business opportunities, or just to say hello—I’d
+                  discussions, business opportunities, or just to say hello—I'd
                   love to hear from you!
                 </p>
               </div>
@@ -266,11 +245,20 @@
               <footer class="footer" id="footer"></footer>
             </div>
           </section>
+          <!-- Future: Blog/Projects Page Placeholder -->
+          <!-- <section class="blog-section" data-section="blog-projects">
+            <div class="container-wrap">
+              <h2 class="colorlib-heading">Blog & Projects</h2>
+              <!-- Blog/project cards will go here in the future -->
+            </div>
+          </section> -->
         </div>
       </div>
     </div>
     <script src="js/jquery.min.js"></script>
     <script src="js/jquery.waypoints.min.js"></script>
     <script src="js/main.js"></script>
+    <script type="module" src="index.js"></script>
+    <script type="module" src="js/profile-card.js"></script>
   </body>
 </html>
