Update index.html with new resume

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               <img alt="profile-img" src="./logo.png" />
             </div>
             <h1 id="colorlib-logo"><a href="./index.html">Sid Senthilkumar</a></h1>
-            <a href="Sid-Senthilkumar-may23.pdf" download class="resume-download-btn">Download Resume</a>
+            <a href="Sid-Senthilkumar-Resume.pdf" download class="resume-download-btn">Download Resume</a>
           </div>
           <nav
             id="colorlib-main-menu"
