--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 <div class="hero-image-container">
                   <!-- To test GitHub PNG, replace src with: https://raw.githubusercontent.com/your-username/your-repo/main/your-image.png -->
                   <img
-                    src="https://cdn.builder.io/api/v1/image/assets%2F87f34bc1e79f4468b12c01d21730619e%2F04c73bff1c49412e8c29861872112536?format=png&quality=100"
+                    src="hero-wo-background.png"
                     alt="Sid Senthilkumar"
                     class="hero-portrait"
                     id="hero-image"
